--- a/press.html
+++ b/press.html
@@ -12,8 +12,8 @@
 <style>
     html,body { height:100%; }
     .parallax { 
-      background-image: url("https://images.unsplash.com/photo-1511559714511-3181c09c1cb0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2700&q=80");
-
+ /*     background-image: url("https://images.unsplash.com/photo-1511559714511-3181c09c1cb0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2700&q=80");
+*/
       height: 100%;
       background-image: opacity: 0.2;
       background-attachment: fixed;
@@ -27,11 +27,8 @@
     display:inline-block;
   }
 
-  img{
-    border-style: solid;
-    border-width: 20px;
-    border-color: black;
-  }
+  .main-logo img {width:3%;}
+
 
   /*to be moved to style.css */
   .fixed {
@@ -42,10 +39,12 @@
 
 nav {
   width: 100%;
+
 }
 
 .header {
   overflow: hidden;
+  z-index: 9999;
 }
 
 .sticky {
@@ -60,7 +59,10 @@ nav {
   <div class="sticky header">
   <nav id="center-menu">
     <ul>
-      <li><a href="index.html">HOME</a></li>
+        <li> <h1> JEN & BERRY'S  </h1> <li>
+
+    <li><a href="index.html">HOME</a></li>
+
       <li><a href="menu.html">MENU</a></li>
       <li><a href="events.html">EVENTS </a></li>
       <li><a href="gallery.html">GALLERY</a></li>
@@ -119,6 +121,7 @@ What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typese
     <ul>
       <li><a>   &copy; Copyright 2019 by nobody. All rights reserved. </a></li>
       <li><a>Call us at 333-ICE-CREAM!</a></li>
+      <li><a>333 Rocky Road, NYC, NY 10005</a></li>
     </ul>
   </footer>
 
@@ -131,19 +134,6 @@ What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typese
   
   // DROPDOWNS 
 
-var nav = $('nav'), w = $(window), sTop = nav.offset().top
-
-w.resize(function() {
-  sTop = nav.offset().top
-})
-
-w.scroll(function() {
-  if(w.scrollTop() > sTop) {
-    nav.addClass('fixed')
-  } else {
-    nav.removeClass('fixed')
-  }
-})
 
 </script>
 </html>
