--- a/press.html
+++ b/press.html
@@ -59,10 +59,8 @@ nav {
   <div class="sticky header">
   <nav id="center-menu">
     <ul>
-        <li> <h1> JEN & BERRY'S  </h1> <li>
-
-    <li><a href="index.html">HOME</a></li>
-
+      <li> <h1> JEN & BERRY'S  </h1> <li>
+      <li><a href="index.html">HOME</a></li>
       <li><a href="menu.html">MENU</a></li>
       <li><a href="events.html">EVENTS </a></li>
       <li><a href="gallery.html">GALLERY</a></li>
@@ -73,10 +71,9 @@ nav {
   </nav>
 </div>
 
-   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
-   Press
+   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 48px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+   PRESS
     </h2>
-
 
 <p>
 What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
