small text updates

--- a/gallery.html
+++ b/gallery.html
@@ -113,6 +113,8 @@
     Gallery
     </h2>
     
+    <p>Click through the gallery to see some of our delicious treats! </p>
+
     <div id="gallery">
         <div class="row">
             <div class="column col-sm">
