--- a/events.html
+++ b/events.html
@@ -4,7 +4,8 @@
   <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
   <meta charset="utf-8">
   <title>Jen & Berry's: Events</title>
   
@@ -14,18 +15,38 @@
       width: 50%;
     }
 
-    #bookclass {
-      height: 250px;
-      width: auto;
-      padding-left: 10%;
+    .title {
+      font-family: 'Flamenco';
+      color: white;
+      text-decoration: underline;
+      font-size: 80px;
+      text-align: center;
+      opacity: 0.7;
+      text-shadow: 2px 2px black;
+      margin-top:50px;
+      margin-bottom:25px;
     }
-    #bookclass:hover {
-      opacity: 0.5;
+
+    .description {
+      position: fixed;
+      width: 40%;
+      font-family: 'Flamenco';
+      background-color: white;
+      text-align: center;
+      bottom:10%;
+      left:30%;
+      opacity:0.8;
+      vertical-align: middle;
+      padding-left:25px;
+      padding-right: 25px;
+      line-height: 80px; 
+      margin: auto;
+
     }
 
     .column {
       float: left;
-      width: 33.33%;
+      width: 31%;
     }
 
     .row: after {
@@ -38,7 +59,6 @@
 </head>
 
 <body>
-  <div class="parallax" >
 
   <nav id="center-menu">
     <ul>
@@ -52,34 +72,59 @@
     </ul>
   </nav>
 
-    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">Events</h2>
+  <h2 class ="title">Events</h2>
 
-    <div class="row" style="padding-left: 5%">
-      <div class="column">
-        <img id="bookclass" src="https://images.unsplash.com/photo-1501443762994-82bd5dace89a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
-      </div>
-      <div class="column">
-        <img id="bookclass" src="https://images.unsplash.com/photo-1511559714511-3181c09c1cb0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80">
-      </div>
-      <div class="column">
-        <img id="bookclass" src="https://images.unsplash.com/photo-1563252781-2f76e089e889?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
-      </div>
+  <div class="row" style="padding-left: 5%">
+
+    <div class="column" id="faded">
+      <img id="bookclass" src="https://images.unsplash.com/photo-1501443762994-82bd5dace89a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
     </div>
- 
+    <div class="column" id="faded">
+      <img id="bookclass" src="https://images.unsplash.com/photo-1511559714511-3181c09c1cb0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80">
+    </div>
+    <div class="column" id="faded">
+      <img id="bookclass" src="https://images.unsplash.com/photo-1563252781-2f76e089e889?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
+    </div>
+
+  </div>
+  
+
+  <div class="description">
+    <h2>Book events, catering, and more by <a href="contact.html">contacting us</a>!</h2>
   </div>
 
   <script language="javascript">
 
-    $(document).ready(function() {
-      $('#bookclass').click(function() {
-        $('#bookclass').append("<h1>It worked chaps</h1>");
+      $(document).ready(function() {
+        $('.description').hide();
+        $('#faded img').hover(function() {
+          $(this).stop().animate({opacity:.4},200);
+          $('.description').fadeIn();
+        }, function() {
+          $(this).stop().animate({opacity:1},500);
+          $('.description').delay(3000).fadeOut();
+        });
       });
-    });
-    $('#bookclass').hover( function(){
-        $('#bookclass').show().offset($(this).offset());
-    }, function(){
-        $('#bookclass').hide();
-    });
-  </script>
+      $(document).ready(function() {
+        $('.description').hide();
+        $('#faded img').hover(function() {
+          $(this).stop().animate({opacity:.4},200);
+          $('.description').fadeIn();
+        }, function() {
+          $(this).stop().animate({opacity:1},500);
+          $('.description').delay(3000).fadeOut();
+        });
+      });
+      $(document).ready(function() {
+        $('.description').hide();
+        $('#faded img').hover(function() {
+          $(this).stop().animate({opacity:.4},200);
+          $('.description').fadeIn();
+        }, function() {
+          $(this).stop().animate({opacity:1},500);
+          $('.description').delay(3000).fadeOut();
+        });
+      });
 
+  </script>
 </body>
