--- a/events.html
+++ b/events.html
@@ -30,6 +30,7 @@
     .description {
       position: fixed;
       width: 40%;
+      color: black;
       font-family: 'Flamenco';
       background-color: white;
       text-align: center;
