--- a/ourstory.html
+++ b/ourstory.html
@@ -4,6 +4,8 @@
   <title>Jen & Berry's: Our Story</title>
   <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <style> 
@@ -33,7 +35,8 @@
     }
     p {
       margin: 25px;
-      font-family: 'Asap', sans-serif;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: lighter;
       font-size: 16px;
       color: #fff;
       text-align: center;
@@ -85,36 +88,16 @@
         </ul>
       </nav>
   
-    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">   
-      Our Story
+    <h2 style="font-family: 'Chivo', sans-serif; color: #fff; text-shadow: 3px 3px #000; font-size: 90px; text-align: center; opacity: 0.9; margin: 40px">   
+      OUR STORY
     </h2>
 
-        <div class="row"> <img src="Ourstory-photos/employees.jpg" alt="Employees" style="width: 70%; height: auto"> </div>
-        <div class="row" style="background-color: #fff; width: 70%; text-align: center"> <p style="color: #000;"> Hi! We're Jen and Berry's. I know what you might be thinking–no way! I love Ben and Jerry's, but our names are <i>actually</i> Jen and Berry!</p>  </div>
+        <div class="row" style="padding: 30px 0 30px 0;"> <img src="Ourstory-photos/employees.jpg" alt="Employees" style="width: 70%; height: auto; padding-top: 0; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"> </div>
+        <div class="row" style="background-color: #E6E6E6; width: 70%; text-align: center; margin: auto; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"> <p style="color: #000;"> Hi! We're Jen and Berry's. I know what you might be thinking–no way! I love Ben and Jerry's, but our names are <i>actually</i> Jen and Berry! We work tirelessly each day to deliver the best quality, most delicious tasting ice cream on the market. </p>  </div>
 
-        <div class="row">
-            <div class="column">
-                <img src="Menu-photos/yellow.jpg" alt="Yellow Ice Cream" class="img">
-            </div>
-            <div class="column">
-                <img src="Menu-photos/purple.jpg" alt="Purple Ice Cream" class="img">
-            </div>
-            <div class="column">
-                <img src="Menu-photos/chocolatechip.jpg" alt="Chocolate Chip Ice Cream" class="img">
-            </div>
-        </div>
+        <br /><br /><br /><br /><br />
 
-        <div class="row">
-            <div class="column">
-                <h4> BANANA </h4> <hr /> <p> If you enjoy a healthier take on our delicious ice cream, this banana ice cream was made for you. Natural and made fresh daily, it tastes like it's right out of the peel! </p>
-            </div>
-            <div class="column">
-                <h4> PURPLE SHERBET </h4> <hr /> <p> More of a sherbet kinda person? Boy, do we have the flavor for you! This purple sherbet combines all the best things of sherbet: the taste and the color!</p>
-            </div>
-            <div class="column">
-                <h4> DOUBLE CHOCOLATE CHIP </h4>  <hr /> <P> Calling all the chocolate lovers! If you're in the mood for something rich and creamy with a hint of crunch, try our double chocolate chip. Even better than a glass of milk with cookies, and that's saying a lot! </P>
-            </div>
-        </div>
+        
     </body>
 
 </html>
