--- a/ourstory.html
+++ b/ourstory.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <style> 
@@ -88,8 +89,8 @@
         </ul>
       </nav>
   
-    <h2 style="font-family: 'Chivo', sans-serif; color: #fff; text-shadow: 3px 3px #000; font-size: 90px; text-align: center; opacity: 0.9; margin: 40px">   
-      OUR STORY
+    <h2 style="color: #fff; text-shadow: 3px 3px #000; font-size: 90px; text-align: center; opacity: 0.9; margin: 40px; text-decoration: underline">   
+      Our Story
     </h2>
 
         <div class="row" style="padding: 30px 0 30px 0;"> <img src="Ourstory-photos/employees.jpg" alt="Employees" style="width: 70%; height: auto; padding-top: 0; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"> </div>
