--- a/events.html
+++ b/events.html
@@ -30,13 +30,12 @@
     .description {
       position: fixed;
       width: 40%;
-      color: black;
       font-family: 'Flamenco';
       background-color: white;
       text-align: center;
       bottom:10%;
       left:30%;
-      opacity:0.9;
+      opacity:0.8;
       vertical-align: middle;
       padding-left:25px;
       padding-right: 25px;
@@ -91,7 +90,7 @@
   
 
   <div class="description">
-    <h2>Book events, catering, and more by <a href="contact.html">contacting us</a>!</h2>
+    <h2 class="description">Book events, catering, and more by <a href="contact.html">contacting us</a>!</h2>
   </div>
 
   <script language="javascript">
@@ -99,7 +98,7 @@
       $(document).ready(function() {
         $('.description').hide();
         $('#faded img').hover(function() {
-          $(this).stop().animate({opacity:.8},200);
+          $(this).stop().animate({opacity:.4},200);
           $('.description').fadeIn();
         }, function() {
           $(this).stop().animate({opacity:1},500);
@@ -109,7 +108,7 @@
       $(document).ready(function() {
         $('.description').hide();
         $('#faded img').hover(function() {
-          $(this).stop().animate({opacity:.8},200);
+          $(this).stop().animate({opacity:.4},200);
           $('.description').fadeIn();
         }, function() {
           $(this).stop().animate({opacity:1},500);
@@ -119,7 +118,7 @@
       $(document).ready(function() {
         $('.description').hide();
         $('#faded img').hover(function() {
-          $(this).stop().animate({opacity:.8},200);
+          $(this).stop().animate({opacity:.4},200);
           $('.description').fadeIn();
         }, function() {
           $(this).stop().animate({opacity:1},500);
