--- a/press.html
+++ b/press.html
@@ -52,6 +52,18 @@ nav {
   top: 0;
 }
 
+.header a:hover {
+  color: #000;
+  text-decoration: underline;
+}
+
+.header a.active {
+  background-color: #FFC2C8;
+  color: #000;
+  padding: 5px 5px 5px 5px;
+  border-radius: 50px;
+}
+
 </style>
 
 <body>
@@ -64,7 +76,7 @@ nav {
       <li><a href="menu.html">MENU</a></li>
       <li><a href="events.html">EVENTS </a></li>
       <li><a href="gallery.html">GALLERY</a></li>
-      <li><a href="press.html">PRESS</a></li>
+      <li><a class="active" href="press.html">PRESS</a></li>
       <li><a href="ourstory.html">OUR STORY</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
     </ul>
@@ -118,7 +130,7 @@ What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typese
     <ul>
       <li><a>   &copy; Copyright 2019 by nobody. All rights reserved. </a></li>
       <li><a>Call us at 33-ICE-CREAM!</a></li>
-      <li><a>33 Rocky Road, NYC, NY 10005</a></li>
+      <li><a>333 Rocky Road, NYC, NY 10005</a></li>
     </ul>
   </footer>
 
