--- a/press.html
+++ b/press.html
@@ -17,7 +17,7 @@
       height: 100%;
       background-image: opacity: 0.2;
       background-attachment: fixed;
-      background-position: center;
+      background-position:s center;
       background-repeat: no-repeat;
       background-size: 100%;
     }
@@ -83,8 +83,8 @@ nav {
   </nav>
 </div>
 
-   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 48px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
-   PRESS
+   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+   Press
     </h2>
 
 <p>
