--- a/press.html
+++ b/press.html
@@ -83,7 +83,7 @@ nav {
   </nav>
 </div>
 
-   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 90px; line-height: 0.3; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
    Press
     </h2>
 
