--- a/press.html
+++ b/press.html
@@ -60,9 +60,16 @@ nav {
 .header a.active {
   background-color: #FFC2C8;
   color: #000;
-  padding: 5px 5px 5px 5px;
-  border-radius: 50px;
+  padding: 12px 12px 12px 12px;
+  border-radius: 70px;
 }
+span{
+  border:2px #000 solid;
+  padding: 15px 15px 15px 15px;
+  border-radius: 40px;
+/*  border-style: dashed;
+*/}
+
 
 </style>
 
@@ -71,7 +78,7 @@ nav {
   <div class="sticky header">
   <nav id="center-menu">
     <ul>
-      <li> <h1> JEN & BERRY'S  </h1> <li>
+      <li> <h1> <span>JEN & BERRY'S</span> </h1> <li>
       <li><a href="index.html">HOME</a></li>
       <li><a href="menu.html">MENU</a></li>
       <li><a href="events.html">EVENTS </a></li>
@@ -83,7 +90,10 @@ nav {
   </nav>
 </div>
 
-   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 90px; line-height: 0.3; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+
+
+
+   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 64px; line-height: 0.3; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
    Press
     </h2>
 
