--- a/press.html
+++ b/press.html
@@ -135,6 +135,8 @@ What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typese
 
 </p>
 
+<div style="height: 100px"> </div>
+
 
   <footer id="center-menu">
     <ul>
