--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,8 @@
             margin: 0;
             padding: 0;
             border: 0;
-            font-family: 'Asap', sans-serif;
+            font-family: 'Open Sans', sans-serif; 
+            font-weight: lighter;
         }
         
         h1, h2, h3, h4, h5, h6 {
@@ -91,7 +92,7 @@
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script language="javascript" src="gallery.js"></script>
 </head>
