--- a/ourstory.html
+++ b/ourstory.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-  <title>Jen & Berry's: Our Story</title>
-  <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+    <title>Jen & Berry's: Our Story</title>
+    <script src="jquery-3.4.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
   <style> 
     body {
@@ -62,6 +65,17 @@
       margin: auto;
     }
 
+    .column-link {
+      float: left;
+      width: 50%;
+      padding: 0 8px;
+      margin: auto;
+    }
+
+    .column-link:hover {
+      opacity: .7;
+    }
+
     .row {
       width: 100%;
       margin: auto;
@@ -108,10 +122,10 @@
 
 
         <div class="row" style="padding: 30px 0 30px 0; text-align: center; width: 70%">
-            <div class="column" style="padding: 0 8px 0 0; position: relative;"> <a href="press.html"> <img src="Ourstory-photos/newspaper.jpg" alt="Newspaper" class="img"> </a>
+            <div class="column-link" style="padding: 0 8px 0 0; position: relative;"> <a href="press.html"> <img src="Ourstory-photos/newspaper.jpg" alt="Newspaper" class="img"> </a>
                 <a href="press.html"> <div class="centered" style="background-color: #fff"><h2>See Where We've Been Mentioned</h2></div> </a>
             </div>
-            <div class="column" style="padding: 0 0 0 8px; position: relative;"> <a href="menu.html"> <img src="Ourstory-photos/flavors.jpg" alt="Flavors" class="img"> </a>
+            <div class="column-link" style="padding: 0 0 0 8px; position: relative;"> <a href="menu.html"> <img src="Ourstory-photos/flavors.jpg" alt="Flavors" class="img"> </a>
                 <a href="menu.html"> <div class="centered" style="background-color: #fff"><h2 style="color: #F78888">Check Out Our Menu</h2></div> </a>
             </div>
         </div>
@@ -122,7 +136,6 @@
         </div>
 
         <br /><br /><br /><br /><br />
-
         
     </body>
 
