--- a/events.html
+++ b/events.html
@@ -90,7 +90,7 @@
   
 
   <div class="description">
-    <h2 class="description">Book events, catering, and more by <a href="contact.html">contacting us</a>!</h2>
+    <h2 class="description" style="opacity: 1; color:black">Book events, catering, and more by <a href="contact.html">contacting us</a>!</h2>
   </div>
 
   <script language="javascript">
