--- a/index.html
+++ b/index.html
@@ -43,19 +43,25 @@
 
 <body>
   <div class="parallax">
-
-  <!--  nav bar and search button --> 
+  <!--  header and nav bar  --> 
+  <div class="sticky header">
   <nav id="center-menu">
     <ul>
-      <li><a href="index.html">HOME</a></li>
+      <li> <h1> <span>JEN & BERRY'S</span> </h1> <li>
+
+    </ul>
+
+    <ul>
+      <li><a class="active" href="index.html">HOME</a></li>
+      <li><a href="menu.html">MENU</a></li>
       <li><a href="events.html">EVENTS </a></li>
       <li><a href="gallery.html">GALLERY</a></li>
-      <li><a href="menu.html">MENU</a></li>
       <li><a href="press.html">PRESS</a></li>
       <li><a href="ourstory.html">OUR STORY</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
     </ul>
   </nav>
+</div>
 
 
     <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
@@ -78,6 +84,18 @@
         There's something special in every cup, cone, and bite. </h4>
       </div>
     </div>
+
+    <div style="height: 100px"> </div>
+
+  <!--  footer  --> 
+
+  <footer id="center-menu">
+    <ul>
+      <li><a>   &copy; Copyright 2019 by nobody. All rights reserved. </a></li>
+      <li><a>Call us at 33-ICE-CREAM!</a></li>
+      <li><a>333 Rocky Road, NYC, NY 10005</a></li>
+    </ul>
+  </footer>
   </div>
 
 </body>
