--- a/menu.html
+++ b/menu.html
@@ -12,11 +12,11 @@
         background-color: #FFC2C8;
     }
     h1 {
-        color: #fff;
-        font-family: 'Flamenco', cursive;
+/*        color: #fff;
+*/        font-family: 'Flamenco', cursive;
         text-align: center;
-        font-size: 64px;
-    }
+/*        font-size: 64px;
+*/    }
 
     h2 {
         color: #FC4A1A;
@@ -75,18 +75,25 @@
 
 </head>
     <body> 
-         <!--  nav bar and search button --> 
-      <nav id="center-menu">
-        <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="events.html">EVENTS </a></li>
-          <li><a href="gallery.html">GALLERY</a></li>
-          <li><a href="menu.html">MENU</a></li>
-          <li><a href="press.html">PRESS</a></li>
-          <li><a href="ourstory.html">OUR STORY</a></li>
-          <li><a href="contact.html">CONTACT US</a></li>
-        </ul>
-      </nav>
+       <!--  header and nav bar  --> 
+  <div class="sticky header">
+  <nav id="center-menu">
+    <ul>
+      <li> <h1> <span>JEN & BERRY'S</span> </h1> <li>
+
+    </ul>
+
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a class="active" href="menu.html">MENU</a></li>
+      <li><a href="events.html">EVENTS </a></li>
+      <li><a href="gallery.html">GALLERY</a></li>
+      <li><a href="press.html">PRESS</a></li>
+      <li><a href="ourstory.html">OUR STORY</a></li>
+      <li><a href="contact.html">CONTACT US</a></li>
+    </ul>
+  </nav>
+</div>
   
     <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">   
       Our Menu
