--- a/press.html
+++ b/press.html
@@ -26,6 +26,7 @@
 
 <body>
   <div class="parallax" >
+  <!--  header and nav bar  --> 
   <div class="sticky header">
   <nav id="center-menu">
     <ul>
@@ -89,7 +90,7 @@ What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typese
 
 <div style="height: 100px"> </div>
 
-
+  <!--  footer  --> 
   <footer id="center-menu">
     <ul>
       <li><a>   &copy; Copyright 2019 by nobody. All rights reserved. </a></li>
