--- a/events.html
+++ b/events.html
@@ -60,17 +60,23 @@
 
 <body>
 
+  <!--  header and nav bar  --> 
+  <div class="sticky header">
   <nav id="center-menu">
     <ul>
+      <li> <h1> <span>JEN & BERRY'S</span> </h1> <li>
+    </ul>
+    <ul>
       <li><a href="index.html">HOME</a></li>
-      <li><a href="events.html">EVENTS </a></li>
-      <li><a href="gallery.html">GALLERY</a></li>
       <li><a href="menu.html">MENU</a></li>
+      <li><a class="active" href="events.html">EVENTS </a></li>
+      <li><a href="gallery.html">GALLERY</a></li>
       <li><a href="press.html">PRESS</a></li>
       <li><a href="ourstory.html">OUR STORY</a></li>
       <li><a href="contact.html">CONTACT US</a></li>
     </ul>
   </nav>
+</div>
 
   <h2 class ="title">Events</h2>
 
@@ -92,6 +98,16 @@
   <div class="description">
     <h3 class="description" style="opacity: 1; color:black; font-size:1.5em">Book events, catering, and more by <a href="contact.html">contacting us</a>!</h2>
   </div>
+
+  <!--  footer  --> 
+  <div style="height: 100px"> </div>
+  <footer id="center-menu">
+    <ul>
+      <li><a>   &copy; Copyright 2019 by nobody. All rights reserved. </a></li>
+      <li><a>Call us at 33-ICE-CREAM!</a></li>
+      <li><a>333 Rocky Road, NYC, NY 10005</a></li>
+    </ul>
+  </footer>
 
   <script language="javascript">
 
@@ -127,4 +143,6 @@
       });
 
   </script>
+
+
 </body>
