--- a/menu.html
+++ b/menu.html
@@ -140,6 +140,18 @@
                 <h4> DOUBLE CHOCOLATE CHIP </h4>  <hr /> <P> Calling all the chocolate lovers! If you're in the mood for something rich and creamy with a hint of crunch, try our double chocolate chip. Even better than a glass of milk with cookies, and that's saying a lot! </P>
             </div>
         </div>
+
+
+  <!--  footer  --> 
+  <div style="height: 100px"> </div>
+  <footer id="center-menu">
+    <ul>
+      <li><a>   &copy; Copyright 2019 by nobody. All rights reserved. </a></li>
+      <li><a>Call us at 33-ICE-CREAM!</a></li>
+      <li><a>333 Rocky Road, NYC, NY 10005</a></li>
+    </ul>
+  </footer>
+
     </body>
 
 </html>
