--- a/ourstory.html
+++ b/ourstory.html
@@ -16,11 +16,11 @@
         background-color: #FFC2C8;
     }
     h1 {
-        color: #fff;
-        font-family: 'Flamenco', cursive;
+/*        color: #fff;
+*/      font-family: 'Flamenco', cursive;
         text-align: center;
-        font-size: 64px;
-    }
+/*        font-size: 48px;
+*/    }
 
     h2 {
         color: #5DA2D5;
@@ -100,18 +100,25 @@
 
 </head>
     <body> 
-         <!--  nav bar and search button --> 
-      <nav id="center-menu">
-        <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="events.html">EVENTS </a></li>
-          <li><a href="gallery.html">GALLERY</a></li>
-          <li><a href="menu.html">MENU</a></li>
-          <li><a href="press.html">PRESS</a></li>
-          <li><a href="ourstory.html">OUR STORY</a></li>
-          <li><a href="contact.html">CONTACT US</a></li>
-        </ul>
-      </nav>
+    <!--  header and nav bar  --> 
+  <div class="sticky header">
+  <nav id="center-menu">
+    <ul>
+      <li> <h1> <span>JEN & BERRY'S</span> </h1> <li>
+
+    </ul>
+
+    <ul>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="menu.html">MENU</a></li>
+      <li><a href="events.html">EVENTS </a></li>
+      <li><a href="gallery.html">GALLERY</a></li>
+      <li><a href="press.html">PRESS</a></li>
+      <li><a class="active" href="ourstory.html">OUR STORY</a></li>
+      <li><a href="contact.html">CONTACT US</a></li>
+    </ul>
+  </nav>
+</div>
   
     <h2 style="color: #fff; text-shadow: 3px 3px #000; font-size: 90px; text-align: center; opacity: 0.9; margin: 40px; text-decoration: underline">   
       Our Story
@@ -135,8 +142,18 @@
             <div class="column" style="width: 66.6666%; height: auto; padding: 0 0 0 16px"> <img src="Ourstory-photos/Parlor.jpg" alt="Ice Cream Parlor" class="img"> </div> 
         </div>
 
-        <br /><br /><br /><br /><br />
-        
+<!--         <br /><br /><br /><br /><br />
+ -->      
+
+ <!--  footer  --> 
+  <div style="height: 100px"> </div>
+  <footer id="center-menu">
+    <ul>
+      <li><a>   &copy; Copyright 2019 by nobody. All rights reserved. </a></li>
+      <li><a>Call us at 33-ICE-CREAM!</a></li>
+      <li><a>333 Rocky Road, NYC, NY 10005</a></li>
+    </ul>
+  </footer>
     </body>
 
 </html>
